--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "p3x-freenom",
-    "version": "1.0.2-6",
+    "version": "1.0.3-10",
     "corifeus": {
         "prefix": "p3x-",
         "publish": true,
@@ -8,7 +8,7 @@
         "code": "Mafia"
     },
     "license": "MIT",
-    "description": "Promise based Freenom",
+    "description": "Freenom API - Promise and auto renew expiring domains",
     "main": "src/index.js",
     "directories": {
         "test": "test"
@@ -31,10 +31,10 @@
     },
     "homepage": "https://pages.corifeus.tk/freenom",
     "devDependencies": {
-        "corifeus-builder": "^1.7.660-16"
+        "corifeus-builder": "^1.7.661-19"
     },
     "dependencies": {
-        "corifeus-utils": "^1.1.328-18"
+        "corifeus-utils": "^1.1.329-21"
     },
     "engines": {
         "node": ">=7.8.0"
